[package]
name = "noteit"
version = "0.1.0"
authors = ["Ravikumar Alluboyina <ravi@robinsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
clap = "*"
pretty_env_logger = "*"
time = "*"
anyhow = "*"
